<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="cn.studyjams.s1.sj26.ShoesTip.MainActivity"
    android:gravity="center_horizontal"
    style="@style/Theme.AppCompat.Light">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/menu_line1"
                    android:scaleType="fitCenter"/>
                <Button
                    android:id="@+id/about_shoes_button"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/about_shoes"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:alpha="0.7"
                    android:background="@drawable/buttonstyles"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/menu_line2"
                    android:scaleType="fitCenter"/>
                <Button
                    android:id="@+id/qualify_shoes_button"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/qualify_shoes"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:alpha="0.7"
                    android:background="@drawable/buttonstyles"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/menu_line3"
                    android:scaleType="fitCenter" />
                <Button
                    android:id="@+id/choose_shoes_button"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/choose_shoes"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:alpha="0.7"
                    android:background="@drawable/buttonstyles"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/menu_line4"/>
                <Button
                    android:id="@+id/maintain_shoes_button"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/maintain_shoes"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:alpha="0.7"
                    android:background="@drawable/buttonstyles"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/menu_line5"
                    android:scaleType="fitCenter" />
                <Button
                    android:id="@+id/about_apps_button"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/about_apps"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:alpha="0.7"
                    android:background="@drawable/buttonstyles"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>S

</LinearLayout>
